--- a/index.html
+++ b/index.html
@@ -3,12 +3,27 @@
     <head>
         <meta charset="UTF-8">
         <title></title>
+        <style> body {
+            background-color: #ffddcc;
+            color: #4d4d4d;
+            margin-right: 200px;
+            margin-left: 200px;
+        }</style>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <p><a href="recipes/bolodecenoura.html">Carrot Cake</a></p>
-        <p><a href="recipes/bolodeninhocomgeleiademorango.html">Strawberry Milk Cake</a></p>
+        <h1 class="title">Odin Recipes</h1>
+        <p class="subtitle">by Ana Gudme</p>
+        <p class="subtitle">June, 2022</p>
+        <p class="picture"><img src="images/cakes.jpg"></p>
+        <p class="para">&emsp;Hi! Welcome to my recipes websites. Here you are going to find some of my favorite cake recipes, the ones that are very famous among my friends and family. Hope these recipes can provide you great moments with the ones you love. Enjoy!</p>
+        <ul class="list">
+            <li><a href="recipes/bolodecenoura.html">Brazilian Carrot Cake</a></li>
+            <li><a href="recipes/bolodeninhocomgeleiademorango.html">Strawberry Milk Cake</a></li>
+            <li><a href="recipes/bolodechocolate.html">Chocolate Cake</a></li> 
+        </ul>
+        
     </body>
 
 
