--- a/recipes/bolodecenoura.html
+++ b/recipes/bolodecenoura.html
@@ -2,15 +2,16 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title></title>
+        <title>Brazilian Carrot Cake</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
-    <body>
-        <h1>Brazilian Carrot Cake</h1>
-        <p><img src="../images/bolodecenoura.jpg"></p>
-        <p><h3>Description</h3></p> 
-        <p>This is a typical Brazilian recipe, that is a version of carrot cake that you may follow in love with. Instead of spicy it is sweet and finished with a chocolate sauce. That's a great recipe to try this weekend and impress your friends.</p>
-        <p>Portions:12</p>
+    <body class="body">
+        <h1 class="title">Brazilian Carrot Cake</h1>
+        <p class="picture"><img src="../images/bolodecenoura.jpg"></p>
+        <p class="subtitle"><h3>Description</h3></p> 
+        <p class="para">&emsp;This is a typical Brazilian recipe, that is a version of carrot cake that you may follow in love with. Instead of spicy it is sweet and finished with a chocolate sauce. That's a great recipe to try this weekend and impress your friends.</p>
+        <p class="para">Portions:12</p>
         <p><h3>Ingredients</h3></p>
         <ul>
             <li>3 large carrots</li>
