--- a/recipes/bolodecenoura.html
+++ b/recipes/bolodecenoura.html
@@ -21,6 +21,8 @@
             <li>3 eggs</li>
             <li>3 cups of refined sugar</li>
             <li>butter and granulated sugar enough to grease the pan</li>
+            <li>1 can of condensed milk</li>
+            <li>1 cup of cocoa powder</li>
         </ul>
 
         <p><h3>Steps</h3></p>
@@ -31,7 +33,7 @@
             <li>Grease the pan with the butter and add granulated sugar, only enough t stick to the butter</li>
             <li>In a blender, mix the eggs, the oil and the chopped carrots.</li>
             <li>In a bowl, place the flour, the sugar and mix until a homogeneous mixture is obtained.</li>
-            <li>To this mixture, add what was mixed in the blender.</li>
+            <li>To this mixture, add what was mixed in the blender and mix it by hand.</li>
             <li>Add the baking powder and mix kindly.</li>
             <li>Pour the cake into the pan and place it in the pre heated oven for 30 minutes.</li>
             <li>After 30 minutes, open the oven and pierce the middle of the cake with a fork. If the fork comes out dry, your cake is ready, if not, let more 10 minutes and check it again. DO NOT OPEN THE OVEN BEFORE 30 MINUTES.</li>
