--- a/recipes/bolodeninhocomgeleiademorango.html
+++ b/recipes/bolodeninhocomgeleiademorango.html
@@ -16,23 +16,57 @@
 
         <p><h3>Ingredients</h3></p>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>1 cup of milk</li>
+            <li>6 egg whites</li>
+            <li>150g of butter</li>
+            <li>1 cup and 3/4 of a cup of sugar</li>
+            <li>2 cups and 1/4 of cup of flour</li>
+            <li>1 teaspoon of vanilla extract</li>
+            <li>3 teaspoon of baking powder</li>
+            <li>1 can of condensed milk</li>
+            <li>2 cups of powdered milk</li>
+            <li>3 egg yolks</li>
+            <li>1 cup of milk</li>
+            <li>500g of strawberries</li>
+            <li>1 cup of sugar</li>
+            <li>1 lime</li>
+            <li>butter and granulated sugar enough to grease the pan</li>
           </ul>
 
         <p><h3>Steps</h3></p>
+        <h5>Cake</h5> 
           <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Pre heat the oven at 180°C</li>
+            <li>Grease the pan with the butter and add granulated sugar, only enough t stick to the butter</li>
+            <li>In a blender, mix the eggs whites, the milk, the refined sugar and the butter.</li>
+            <li>In a bowl mix by hand the mixture, the vanilla extract and the flour until a homogeneous mixture is obtained.</li>
+            <li>Add the baking powder and mix kindly.</li>
+            <li>Pour the cake into the pan and place it in the pre heated oven for 30 minutes.</li>
+            <li>After 30 minutes, open the oven and pierce the middle of the cake with a fork. If the fork comes out dry, your cake is ready, if not, let more 10 minutes and check it again. DO NOT OPEN THE OVEN BEFORE 30 MINUTES.</li>
+            <li>When ready, turn off the oven and let the cake cool off a little bit before getting it out of the pan. DO NOT TRY TO TAK THE CAKE OUT OF THE PAN WHILE IT'S TOO HOT.</li>
+        </ol>
+
+          <h5>Milk ganache</h5> 
+          <ol>
+            <li>In a pan, place the condensed milk, the egg yolks, the milk and the powdered milk.</li>
+            <li>Mix over low heat to obtain a homogeneous mixture.</li>
+            <li>When the mixture starts to boil mix for more 5 minutes and turn off the heat.</li>
           </ol>
 
+          <h5>Strawberry jam</h5> 
+          <ol>
+            <li>In a large pan, add the strawberries, sugar and the juice of one lime, and toss it all together.</li>
+            <li>Bring to a boil, and cook while stirring until thick, about 10 to 12 minutes.</li>
+          </ol>
 
+          <h5>Setting up the cake</h5> 
+          <ol>
+            <li>Once your cake is out of the pan, cut it in half whith a sewing thread or dental floss not used before.</li>
+            <li>Place on top of the first half the strawberry jam.</li>
+            <li>Cover the jam with the other half like a sandwich.</li>
+            <li>On top of the cake place the milk ganache.</li>
+            <li>If you want, you can decorate the cake with some fresh strawberries, a little bit of powdered milk or make some drawing with the strawberry jam.</li>
+          </ol>
 
 </body>
 
