--- a/recipes/bolodechocolate.html
+++ b/recipes/bolodechocolate.html
@@ -15,27 +15,42 @@
 
         <p><h3>Ingredients</h3></p>
           <ul>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
+              <li>5 eggs</li>
+              <li>1 cup of soy oil</li>
+              <li>1 cup of milk</li>
+              <li>2 cups of refined sugar</li>
+              <li>2 cups of flour</li>
+              <li>1 tablespoon of baking powder</li>
+              <li>2 cups of cocoa powder</li>
+              <li>1 can of condensed milk</li>
+              <li>butter and granulated sugar enough to grease the pan</li>
+
           </ul>
 
 
         <p><h3>Steps</h3></p>
+        <h5>Cake</h5>
           <ol>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-          </ol>
-
-
+            <li>Pre heat the oven at 180°C</li>
+            <li>Grease the pan with the butter and add granulated sugar, only enough t stick to the butter</li>
+            <li>In a blender, mix the eggs, the oil and the milk.</li>
+            <li>Add the refined sugar and blend it again for more 2 minutes.</li>
+            <li>In a bowl, place the flour, the cocoa powder and mix until a homogeneous mixture is obtained.</li>
+            <li>To this mixture, add what was mixed in the blender and mix it by hand.</li>
+            <li>Add the baking powder and mix kindly.</li>
+            <li>Pour the cake into the pan and place it in the pre heated oven for 40 minutes.</li>
+            <li>After 30 minutes, open the oven and pierce the middle of the cake with a fork. If the fork comes out dry, your cake is ready, if not, let more 10 minutes and check it again. DO NOT OPEN THE OVEN BEFORE 30 MINUTES.</li>
+            <li>When ready, turn off the oven and let the cake cool off a little bit before getting it out of the pan. DO NOT TRY TO TAK THE CAKE OUT OF THE PAN WHILE IT'S TOO HOT.</li>
+          </ol>             
+                     
+          <h5>Chocolate Sauce</h5>
+        <ol> 
+           <li>In a pan, add a tablespoon of butter, 1 can of condensed milk and 1/3 of a cup of chocolate powder.</li>
+           <li>Mix over low heat to obtain a homogeneous mixture.</li>
+           <li>When the mixture is coming off the bottom of the pan, turn off the heat.</li>
+           <li>Once the cake is ready and already out of the pan, pour the chocolate sauce on top of the cake.</li>
+        </o>  
 
 </body>
-
-
-
 
 </html>
